# postgresql-trino-gateway

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  REUSE.toml  build-static.sh  build.rs  build.sh  connect.sh  deny.toml  start.sh
.github/workflows/: build.yaml  pr_pre-commit.yaml  security_audit.yaml
LICENSES/: OSL-3.0.txt
deploy/helm/postgresql-trino-gateway/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/postgresql-trino-gateway/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
docker/: Dockerfile
scripts/: build-static.sh  build.sh  connect.sh  start.sh
src/: cancel.rs  config.rs  error_mapping.rs  handler.rs  info_schema.rs  intercept.rs  lib.rs  main.rs  policy.rs  query_extended.rs  query_inspection.rs  query_pipeline.rs  query_simple.rs  session.rs  startup.rs  tls.rs  trino_stream.rs  types.rs
src/catalog/: mod.rs  pg_attribute.rs  pg_class.rs  pg_type.rs  stubs.rs
src/rewrite/: casts.rs  functions.rs  limit_offset.rs  mod.rs  predicates.rs
tests/: integration_test.rs  psql_integration_test.rs
tests/common/: mod.rs
