[package]
name = "postgresql-trino-gateway"
version = "0.1.0"
edition = "2024"
authors = ["Stackable GmbH"]
description = "A PostgreSQL wire protocol gateway for Trino, enabling Power BI DirectQuery"
license = "OSL-3.0"
repository = "https://github.com/stackabletech/postgresql-trino-gateway"
keywords = ["postgresql", "trino", "gateway", "powerbi"]

[dependencies]
pgwire = "0.38"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde_json = "1"
trino-rust-client = "0.9"
serde = { version = "1", features = ["derive"] }
async-stream = "0.3"
dashmap = "6"
sqlparser = { version = "0.61", features = ["visitor"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tokio-postgres = "0.7"

[lints.clippy]
unwrap_in_result = "deny"
unwrap_used = "deny"
panic = "deny"
