[package]
name = "postgresql-trino-gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Stackable GmbH"]
description = "A PostgreSQL wire protocol gateway for Trino, enabling Power BI DirectQuery"
license = "OSL-3.0"
repository = "https://github.com/stackabletech/postgresql-trino-gateway"
keywords = ["postgresql", "trino", "gateway", "powerbi"]

[dependencies]
pgwire = "0.39"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde_json = "1"
trino-rust-client = "0.9"
async-stream = "0.3"
sqlparser = { version = "0.61", features = ["visitor"] }
# PEM parsing uses rustls-pki-types' PemObject API directly (the `std`
# feature provides the file-reading methods). rustls-pemfile was dropped —
# it is unmaintained (RUSTSEC-2025-0134) and is now just a thin wrapper
# around this same code.
rustls-pki-types = { version = "1", features = ["std"] }
rand = "0.10"
# Used to build typed values for the binary result-wire-format path
# (`types::encode_cell`). Versions are unified with the impls pgwire's
# default features pull into `postgres-types` (chrono 0.4, rust_decimal 1.x
# with `db-postgres`), so the `ToSql`/`ToSqlText` impls apply.
chrono = "0.4"
rust_decimal = { version = "1", features = ["db-postgres"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
# with-chrono-0_4 lets the test client decode binary timestamps, exercising
# the binary result path for the customer's timestamp columns end-to-end.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"
tempfile = "3"
rcgen = "0.14"

[lints.clippy]
unwrap_in_result = "deny"
unwrap_used = "deny"
panic = "deny"
